--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./public/frontend/css/stydetails.css" />
-    <link rel="stylesheet" href="./public/frontend/css/style.css" />
+    <link rel="stylesheet" href="/public/frontend/css/stydetails.css" />
+    <link rel="stylesheet" href="/public/frontend/css/style.css" />
   </head>
   <body>
+
     <div id="app"></div>
 
     <!-- icon mess -->
@@ -46,9 +47,9 @@
         <i class="fa-brands fa-facebook-messenger"></i>
       </a>
     </div>
-
     <!-- link css -->
     <script type="module" src="/src/main.js"></script>
+    <!-- <script type="module" src="/src/main.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -62,7 +63,7 @@
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"></script>
 
-    <script src="./public/frontend/js/script.js" defer></script>
+    <script src="/public/frontend/js/script.js" defer></script>
 
     <script
       type="module"
